<resources>

  <string name="app_name">TIDAL Streamer</string>
  <string name="queue_action_error">Queue update failed</string>
  <string name="queue_empty_message">Queue is empty</string>
  <string name="queue_empty_title">Nothing playing</string>
  <string name="queue_label">QUEUE</string>
  <string name="queue_label_position_count">QUEUE • %1$d OF %2$d</string>
  <string name="queue_reorder">Reorder</string>
  <string name="queue_remove">Remove from queue</string>
  <string name="queue_remove_all_others">Remove all others</string>
  <string name="queue_remove_all_after">Remove all after</string>
  <string name="queue_unavailable_track">Unavailable track</string>
  <string name="browse_main_title">TIDAL        </string>
  <string name="browse_user_title">Collection</string>

  <string name="play_now">Play Now</string>
  <string name="play_next">Play Next</string>
  <string name="play_after">Add to Queue</string>
  <string name="go_to_album">Go to Album</string>
  <string name="go_to_artist">Go to Artist</string>
  <string name="go_to_prefix">Go to</string>
  <string name="go_to_artist_radio">Artist Radio</string>
  <string name="go_to_artist_info">Artist Info</string>
  <string name="go_to_track_radio">Track Radio</string>

  <string name="playback_hint_rec">REC</string>
  <string name="playback_hint_favorite">Favorite</string>
  <string name="playback_hint_unfavorite">Unfavorite</string>
  <string name="playback_hint_jump">JUMP</string>
  <string name="playback_hint_queue">Queue</string>
  <string name="playback_hint_cc">CC</string>
  <string name="playback_hint_lyrics">Lyrics</string>
  <string name="playback_hint_audio">AUDIO</string>
  <string name="playback_hint_menu">Menu</string>
  <string name="playback_next_track">Next: %1$s / %2$s</string>
  <string name="playback_next_track_title_only">Next: %1$s</string>

  <string name="album_art_description">Album art</string>
  <string name="artist_description">Album art</string>

  <string name="artist_radio">Artist Radio</string>
  <string name="radio_title">%s Radio</string>

  <string name="artist_info">Artist Info</string>

  <string name="playback_album_art_transition_name">album_art</string>
  <string name="playback_title_transition_name">title</string>
  <string name="playback_artist_transition_name">artist</string>
  <string name="playback_progress_transition_name">progress</string>

  <plurals name="track_count">
    <item quantity="one">%d track</item>
    <item quantity="other">%d tracks</item>
  </plurals>

  <!-- Error messages -->
  <string name="error_no_playback">No music is currently playing</string>
  <string name="error_fragment_message">An error occurred</string>
  <string name="dismiss_error">Dismiss</string>

</resources>
